<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="file_provider" translatable="false">com.stoutner.privacybrowser.fileprovider.standard</string>
    <string name="privacy_browser">Privacy Browser</string>
    <string name="short_name">Privacy</string>
    <string name="android_asset_path">en</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="first_party_cookies_enabled">First-Party Cookies enabled</string>
    <string name="first_party_cookies_disabled">First-Party Cookies disabled</string>
    <string name="third_party_cookies_enabled">Third-Party Cookies enabled</string>
    <string name="third_party_cookies_disabled">Third-Party Cookies disabled</string>
    <string name="dom_storage_enabled">DOM Storage enabled</string>
    <string name="dom_storage_disabled">DOM Storage disabled</string>
    <string name="form_data_enabled">Form Data enabled</string>
    <string name="form_data_disabled">Form Data disabled</string>
    <string name="cookies_deleted">Cookies deleted</string>
    <string name="dom_storage_deleted">DOM Storage deleted</string>
    <string name="form_data_deleted">Form Data deleted</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="no_title">No title</string>
    <string name="unrecognized_url">Unrecognized URL:</string>
    <string name="open_with">Open with</string>
    <string name="add_tab">Add tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="new_tab">New tab</string>
    <string name="loading">Loading…</string>
    <string name="error">Error:</string>
    <string name="loading_easylist">Loading EasyList</string>
    <string name="loading_easyprivacy">Loading EasyPrivacy</string>
    <string name="loading_fanboys_annoyance_list">Loading Fanboy’s Annoyance List</string>
    <string name="loading_fanboys_social_blocking_list">Loading Fanboy’s Social Blocking List</string>
    <string name="loading_ultralist">Loading UltraList</string>
    <string name="loading_ultraprivacy">Loading UltraPrivacy</string>
    <string name="save_as">Save As</string>
    <string name="save_image_as">Save Image As</string>
    <string name="file_name">File name</string>
    <string name="image_name">Image name</string>
    <string name="unknown_size">unknown size</string>
    <string name="download">Download</string>
    <string name="cannot_download_file">This file cannot be downloaded because it does not have an HTTP or HTTPS URI.</string>
    <string name="cannot_download_image">This image cannot be downloaded because it does not have an HTTP or HTTPS URI.</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="url_or_search_terms">URL or Search Terms</string>
    <string name="view_ssl_certificate">View SSL Certificate</string>
    <string name="unencrypted_website">Unencrypted Website</string>
    <string name="no_ssl_certificate">Communication with this website is not encrypted. This allows third parties to intercept information, track your browsing, and inject malicious content.</string>
    <string name="ssl_certificate">SSL Certificate</string>
    <string name="close">Close</string>
    <string name="domain">Domain</string>
    <string name="domain_label">Domain:</string>
    <string name="ip_addresses">IP Addresses:</string>
    <string name="issued_to">Issued To</string>
    <string name="issued_by">Issued By</string>
    <string name="common_name">Common Name (CN):</string>
    <string name="organization">Organization (O):</string>
    <string name="organizational_unit">Organizational Unit (OU):</string>
    <string name="valid_dates">Valid Dates</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="ssl_certificate_error">SSL Certificate Error</string>
    <string name="proceed">Proceed</string>
    <string name="future_certificate">The certificate start date is in the future</string>
    <string name="expired_certificate">The certificate is expired</string>
    <string name="cn_mismatch">The Common Name does not match the hostname</string>
    <string name="untrusted">The certificate authority is not trusted</string>
    <string name="clear_and_exit">Clear and Exit</string>
    <string name="javascript">JavaScript</string>
    <string name="add_domain_settings">Add Domain Settings</string>
    <string name="first_party_cookies">First-Party Cookies</string>
    <string name="third_party_cookies">Third-Party Cookies</string>
    <string name="dom_storage">DOM Storage</string>
    <string name="form_data">Form Data</string>
    <string name="clear_data">Clear Data</string>
        <string name="clear_cookies">Clear Cookies</string>
        <string name="clear_dom_storage">Clear DOM Storage</string>
        <string name="clear_form_data">Clear Form Data</string>
        <string name="options_fanboys_annoyance_list">Fanboy’s Annoyance List</string>
        <string name="options_fanboys_social_blocking_list">Fanboy’s Social Blocking List</string>
        <string name="options_block_all_third_party_requests">Block All Third-Party Requests</string>
        <string name="font_size">Font Size</string>
            <string name="twenty_five_percent">25%</string>
            <string name="fifty_percent">50%</string>
            <string name="seventy_five_percent">75%</string>
            <string name="one_hundred_percent">100%</string>
            <string name="one_hundred_twenty_five_percent">125%</string>
            <string name="one_hundred_fifty_percent">150%</string>
            <string name="one_hundred_seventy_five_percent">175%</string>
            <string name="two_hundred_percent">200%</string>
        <string name="swipe_to_refresh_options_menu">Swipe to Refresh</string>
        <string name="display_images">Display Images</string>
        <string name="find_on_page">Find on Page</string>
        <string name="print">Print</string>
        <string name="add_to_home_screen">Add to Home Screen</string>
        <string name="view_source">View Source</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="move_to_folder">Move to Folder</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="privacy">Privacy</string>
        <string name="javascript_preference">JavaScript</string>
        <string name="javascript_preference_summary">JavaScript allows websites to run programs (scripts) on the device.</string>
        <string name="first_party_cookies_preference">First-party cookies</string>
        <string name="first_party_cookies_preference_summary">Because first-party cookies are an app level setting, when the active tab has cookies enabled,
            any network requests made in the background by other tabs will also include any stored cookies for their domains.
            Android KitKat (version 4.4.x) does not differentiate between first and third-party cookies and will enable them both with this setting.</string>
        <string name="third_party_cookies_preference">Third-party cookies</string>
        <string name="third_party_cookies_summary">This setting requires Android Lollipop (version 5.0) or higher.  It has no effect if first-party cookies are disabled.</string>
        <string name="dom_storage_preference">DOM storage</string>
        <string name="dom_storage_preference_summary">JavaScript must be enabled for DOM storage to function.</string>
        <string name="save_form_data_preference">Form data</string>
        <string name="save_form_data_preference_summary">Saved form data can auto-populate fields on websites.</string>
        <string name="user_agent">User agent</string>
        <string name="custom_user_agent">Custom user agent</string>
        <string name="incognito_mode">Incognito Mode</string>
        <string name="incognito_mode_summary">Clear the history and cache after each webpage finishes loading. Forward and back do not work in Incognito Mode.</string>
        <string name="do_not_track">Do Not Track</string>
        <string name="do_not_track_summary">Send the Do Not Track header, which politely suggests that web servers not track this browser.</string>
        <string name="allow_screenshots">Allow screenshots</string>
        <string name="allow_screenshots_summary">Allow screenshots, video recording, and viewing on non-secure displays. Changing this setting will restart Privacy Browser.</string>
    <string name="blocklists">Blocklists</string>
        <string name="easylist">EasyList</string>
        <string name="easylist_summary">Main ad blocking list.</string>
        <string name="easyprivacy">EasyPrivacy</string>
        <string name="easyprivacy_summary">Main tracker blocking list.</string>
        <string name="ultraprivacy">UltraPrivacy</string>
    <string name="tor">Tor</string>
        <string name="proxy_through_orbot">Proxy through Orbot</string>
        <string name="proxy_through_orbot_summary">Proxy all web traffic through Orbot on localhost:8118.</string>
        <string name="tor_homepage">Tor homepage</string>
        <string name="tor_search">Tor search</string>
        <string name="tor_search_custom_url">Tor search custom URL</string>
    <string name="search">Search</string>
        <string name="search_custom_url">Search custom URL</string>
    <string name="full_screen">Full Screen</string>
        <string name="full_screen_browsing_mode">Full screen browsing mode</string>
        <string name="full_screen_browsing_mode_summary">Double-tap to toggle full screen browsing mode.</string>
    <string name="clear_everything">Clear everything</string>
        <string name="clear_everything_summary">Clears cookies, DOM storage, form data, and WebView’s cache.  Then manually deletes the entire “app_webview” and “cache” directories.</string>
        <string name="clear_cookies_preference">Clear cookies</string>
        <string name="clear_cookies_summary">Clears first and third-party cookies.</string>
        <string name="clear_dom_storage_preference">Clear DOM storage</string>
        <string name="clear_dom_storage_summary">Clears DOM storage.</string>
        <string name="clear_form_data_preference">Clear form data</string>
        <string name="clear_form_data_summary">Clears form data.</string>
        <string name="clear_cache">Clear cache</string>
        <string name="clear_cache_summary">Clears WebView’s cache.</string>
    <string name="general">General</string>
        <string name="homepage">Homepage</string>
        <string name="swipe_to_refresh_summary">Some websites don’t work well if swipe to refresh is enabled.</string>
        <string name="display_additional_app_bar_icons">Display additional app bar icons</string>
        <string name="display_additional_app_bar_icons_summary">Display icons in the app bar for refreshing the WebView and, if there is room, for toggling cookies and DOM storage.</string>
        <string name="dark_theme">Dark theme</string>
        <string name="dark_theme_summary">Changing the theme will restart Privacy Browser.</string>
        <string name="night_mode">Night mode</string>
        <string name="night_mode_summary">Enabling night mode will also enable JavaScript for all web pages.</string>
        <string name="display_webpage_images">Display webpage images</string>
        <string name="display_webpage_images_summary">Disable to conserve bandwidth.</string>
    <string name="ad_consent">Ad Consent</string>
</resources>