<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright © 2015-2017 Soren Stoutner <soren@stoutner.com>.

  This file is part of Privacy Browser <https://www.stoutner.com/privacy-browser>.

  Privacy Browser is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Privacy Browser is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Privacy Browser.  If not, see <http://www.gnu.org/licenses/>. -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/move_bookmark_up"
        android:title="@string/move_up"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move_bookmark_down"
        android:title="@string/move_down"
        android:orderInCategory="20"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move_to_folder"
        android:title="@string/move_to_folder"
        android:orderInCategory="30"
        android:icon="?attr/moveToFolderIcon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_bookmark"
        android:title="@string/edit"
        android:orderInCategory="40"
        android:icon="?attr/editIcon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_bookmark"
        android:title="@string/delete"
        android:orderInCategory="50"
        android:icon="?attr/deleteIcon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/context_menu_select_all_bookmarks"
        android:title="@string/select_all"
        android:orderInCategory="60"
        android:icon="?attr/selectAllIcon"
        app:showAsAction="ifRoom" />
</menu>